k8k/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fintech-ingress
  namespace: fintech
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: fintech.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3002
          
      - path: /api/transactions
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3003              

      - path: /api/balance
        pathType: Prefix
        backend:
          service:
            name: transaction-service
            port:
              number: 3003
